src/test/ui/resolve/issue-17518.stderr
error[E0422]: cannot find struct, variant or union type `E` in this scope
  --> $DIR/issue-17518.rs:6:5
   |
LL |     E { name: "foobar" };
   |     ^ not found in this scope
help: possible candidate is found in another module, you can import it into scope
   |
LL | use SomeEnum::E;
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0422`.
